# ScadViewer

./: .gitignore  CMakeLists.txt  History.txt  Mp4PlayerMFC.cpp  Mp4PlayerMFC.h  OptionsPP.h  PropertiesCtrl.cpp  PropertiesCtrl.h  README.md  SC3DPoint.cxx  SC3DRetCodes.hxx  ScadViewer.cpp  ScadViewer.dep  ScadViewer.dsp  ScadViewer.dsw  ScadViewer.h  ScadViewer.mak  ScadViewer.rc  ScadViewer.sln  ScadViewer.vcxproj  ScadViewer32.manifest  ScadViewer64.manifest  StdAfx.cpp  StdAfx.h  Version.h  make.sh  resource.h
DOC/: History.txt  Printing.vsd  ВИЗУАЛИЗАЦИЯ ТЗ 01.doc  ВИЗУАЛИЗАЦИЯ ТЗ 02.doc  Перечень работ по вьюверу 2008.doc  Структура хранения информации о координационных осях.doc
DOC/Architecture/: KiewView.mdl
DOC/Plan/: ForumView-Nov-Dec2006-Jan2016.mpp  ForumView-Nov-Dec2006.mpp  ForumView.mpp  ForumView1.mpp
Debug11xp/: Scad.ini
Forum3DView/: .cdtproject  .project  3DIso.hpp  3DVector.h  ADDZIP.H  BmpSaveDlg.cpp  BmpSaveDlg.h  CMakeLists.txt  CameraDialogBar.cpp  CameraDialogBar.h  ColorButton.cpp  ColorButton.h  ColourPopup.cpp  ColourPopup.h  Cutter.cpp  Cutter.h  DefProjType.h  DelimDialog.cpp  DelimDialog.h  DepthDialogBar.cpp  DepthDialogBar.h  DetViewOpts.h  DibGlRenderer.cpp  DibGlRenderer.h  DirChangeListener.cpp  DirChangeListener.h  DockFolderWnd.cpp  DockFolderWnd.h  ExportDXF.cpp  ExportDXF.h  FileProc.cpp  FileProc.h  FolderListCtrl.cpp  FolderListCtrl.h  FolderTreeDockingWnd.cpp  FolderTreeDockingWnd.h  Forum3DView.clw  Forum3DView.cpp  Forum3DView.def  Forum3DView.dsp  (+104 more)
Forum3DView/ForumView_ENG/: CMakeLists.txt  ForumView_ENG.clw  ForumView_ENG.dep  ForumView_ENG.dsp  ForumView_ENG.rc  ForumView_ENG.vcxproj  resource.h
Forum3DView/ForumView_ENG/res/: ForumView_ENG.rc2
Forum3DView/ForumView_RUS/: CMakeLists.txt  ForumView_RUS.dsp  ForumView_RUS.rc  ForumView_RUS.vcproj  ForumView_RUS.vcxproj  resource.h
Forum3DView/ForumView_RUS/res/: ForumView_RUS.rc2  resource.h
Forum3DView/GridSrc/: CellRange.h  GridCell.cpp  GridCell.h  GridCellBase.cpp  GridCellBase.h  GridCellCheck.cpp  GridCellCheck.h  GridCtrl.cpp  GridCtrl.h  GridDropTarget.cpp  GridDropTarget.h  InPlaceEdit.cpp  InPlaceEdit.h  MemDC.h  StdAfx.h  TitleTip.cpp  TitleTip.h
Forum3DView/RTree/: Node.cpp  Node.h  Point.cpp  RTree.h  RTree.vcxproj  Rectangle.cpp  Rectangle.h  stdafx.h
Forum3DView/Release21_64/: Forum3DView21.exp  Forum3DView21.lib
Forum3DView/res/: InvCut.cur  Select.cur  WALK.CUR  Zoom.cur
ForumView_ENG/: CMakeLists.txt  ForumView_ENG.mak  ForumView_ENG.rc  ForumView_ENG.vcproj.7.10.old  ForumView_ENG.vcxproj  resource.h  resource.h.bak
ForumView_RUS/: ForumView_RUS.rc  ForumView_RUS.vcxproj  resource.h
GridSrc/: GridCell.cpp  GridCtrl.cpp
MsClass/: MsClass.dsp  MsClass.sln  MsClass.vcproj  MsClass.vcxproj
MsClass/INCLUDE/: BIT.H  Baseclass.hpp  Bound.h  CONVERT.H  Crash.h  Dataload.h  DefClass.h  EDIT_WRT.H  FE_66.H  FE_BASE.H  FE_LR_DR.h  FE_OS.H  FE_PLATE.H  FE_PL_MD.H  Fe_data.h  Fe_head.h  Fe_rod.h  File_mem.h  Filetext.h  ForumForce.hpp  Fund.h  GAUSS.H  Inp_doc.h  Inp_rgd.h  Insert.h  LITERA.H  LOADCOMB.H  Memclass.h  Memvect.hpp  Message.h  ObjectList.hpp  ObjectString.hpp  PROC_RSU.H  Proffull.h  Profile.h  RGD_OSD.H  RGD_PL_N.H  RGD_ROD.H  RGD_RODN.H  RGD_VL_A.H  (+42 more)
MsClass/RC/: CLASSERR.RC  CLASSERR.STR  POLYGON.CUR  PROLGDLL.CPP  RECT.CUR  cursor1.cur
OglIso/: OglIso.cpp  OglIso.def  OglIso.dep  OglIso.dsp  OglIso.h  OglIso.mak  OglIso.vcproj.7.10.old  OglIso.vcxproj  StdAfx.cpp  StdAfx.h
Other/: PropertiesCtrl.h  SC3DMatrix.cxx  SC3DMatrix.hxx
RTree/: CMakeLists.txt  CMakeSettings.json  Node.cpp  Node.h  Point.cpp  Point.h  RTree.h  RTree.vcxproj  Rectangle.cpp  Rectangle.h
SDATA/: 1 - копия.SPR  1.SPR  1.bak  22.spr  A11.DXF  A11.spr  ACH.SPR  Air.DXF  Air.SPR  Akar.spr  Alt1.SPR  Alt123.spr  Antenna.SPR  BGR2.spr  Beton1.SPR  CheckKulikov.SPR  Ctr1.SPR  Ctr2.SPR  D22.spr  Ddd.SPR  Dima.SPR  Estdos.SPR  Forum.bak  Forum.opr  Forum2(Old)(Old).opr  Forum2(Old).opr  Forum2.SPR  Forum2.bak  Forum2.opr  Forum21.SPR  Forum22.SPR  Lt1723.SPR  SMX.TXT  a.spr  a12345.spr  a725Solid1.spr  aa23.spr  b1.SPR  ba1.spr  ba2.SPR  (+27 more)
SDATA/Examples/: CS01.TXT  CS06.TXT  CS07.TXT  CS08.TXT  CS08A.TXT  CS09A.TXT  CS14.TXT  CS27.TXT  CS40.TXT  CS41.TXT  CS51.TXT  CS54.TXT  CS8_1.TXT  CS8_2.TXT  CU01.TXT  CU02.TXT  DI1.SPR  DI2.SPR  DI3.SPR  Di1.TXT  Di2.TXT  Di3.TXT  Hole1.PPR  KSLS01.TXT  SSLL01.TXT  SSLL02.TXT  SSLL03.TXT  SSLL05.TXT  SSLL06.TXT  SSLL07.TXT  SSLL08.TXT  SSLL09.TXT  SSLL10.TXT  SSLL11.TXT  SSLL12.TXT  SSLL13.TXT  SSLL14.TXT  SSLL15.TXT  SSLL15A.TXT  SSLL16.TXT  (+31 more)
SDATA/models/: Domf_toТ=(- верх +низ).spr  S1_1.SPR  b2_1.SPR  scthumb.db  Арбат_упр_осн_530.SPR  Орд 40 каркас П.DXF  Орд 40 каркас П.SPR  П_99_09_011.SPR  Т_00_01_012.DXF  Ф_пл_01_2000_01_11.SPR  Фунд Плита_3.SPR  Я_99_07_1351.SPR  сл.пер.1-к.п.с.ш..spr
SDATA/test/: Dom1.SPR  Test 170204.SPR  scthumb.db  test2.SPR
Scad11/Include/: AGENTINF.H  Armatura.hpp  BASECLASS.HPP  ConstrSection.h  CoordLine.hpp  DataRigid.hpp  DataRigidOneSided.HPP  DataRigidPlate.HPP  DataRigidRod.HPP  DataRigidVolume.hpp  DefClass.h  Destruction.hpp  DynamicMetod.h  EDIT_WRT.H  ELEMENT.HPP  FE_66.H  FE_HEAD.H  FE_LR_DR.h  FE_OS.H  FE_PLATE.H  FE_PL_MD.H  FE_ROD.H  FRAGMENT.HPP  File_mem.h  Filetext.h  ForceTime.hpp  GAUSS.H  HaspSolv.h  INP_MG.H  Inp_data.hpp  InputOldDoc.h  Insert.hpp  LITERA.H  MEMCLASS.H  MESSAGE.H  MessageLib.H  ObjectData.hpp  ObjectDouble.hpp  ObjectFile.hpp  ObjectList.hpp  (+62 more)
Scad11/Lib/: ClassHelp.lib  Profile11.lib  Result.lib  (+3 more)
TestMfc/: MainFrm.cpp  MainFrm.h  ReadMe.txt  StdAfx.cpp  StdAfx.h  TestMfc.cpp  TestMfc.dsp  TestMfc.h  TestMfc.rc  TestMfc.vcproj  TestMfcDoc.cpp  TestMfcDoc.h  TestMfcView.cpp  TestMfcView.h  resource.h
TestNonMfc/: ReadMe.txt  StdAfx.cpp  TestNonMfc.cpp  TestNonMfc.dsp  TestNonMfc.h  TestNonMfc.rc  resource.h
_buildRel/: CMakeCache.txt  make.bat  make.sh
hlp/: ScadViewer.hm  ScfExplorer.hm  ScfView.hm
res/: Cut.cur  Forum3DView.rc2  LookAround.CUR  Pan.cur  Rotate.cur  ScadViewer.rc2  ZoomInOut.cur
(+183 files in other folders)
